# alacrittab

./: .gitignore  Cargo.toml
src/: app.rs  common.rs  gtk.rs  gui.rs  main.rs  notebook.rs  tab.rs  tabs.rs  terminal_display.rs  ui.rs
src/common/: display.rs  event_handler.rs
src/gtk/: app.rs  tab.rs  tabs.rs  terminal.rs
src/gui/: state.rs
