[package]
name = "alacrittab"
version = "0.1.0"
authors = ["Luc Street <lucis-fluxum@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
alacritty_terminal = { version = "0.14.0", default-features = false }
gtk = { version = "0.9.2", default-features = false, features = ["v3_24"] }
gdk = "*"
glib = "*"
relm = "0.21.0"
relm-derive = "0.21.0"
