[package]
name = "alacrittab"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
alacritty_terminal = { version = "0.14.0", default-features = false }
epoxy = "0.1.0"
gl = "0.14.0"
relm4 = { version = "0.4.0", features = ["libadwaita", "macros"] }
shared_library = "0.1.9"
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.18", default-features = false, features = ["ansi", "env-filter", "fmt"] }
